# GraphColoring-cpp

./: .gitignore  .gitmodules  CMakeLists.txt
Header/: dsatur.h  graph_color.h  hybrid.h  hybrid_dsatur.h  lmxrlf.h  mcs.h
Source/: main.cpp
